--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "react-admin-clipboard-list-field",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Copy to clipboard in one click in React Admin",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "lint": "eslint src/**/*",
+    "prepare" : "npm run build",
     "demo-install": "(cd ./demo && npm install)",
     "demo": "(cd ./demo && npm start)"
   },
